# pfm

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs  state.rs  templates.rs
src/adapters/: groot.rs  mod.rs  tmux.rs
src/commands/: agent.rs  check.rs  init.rs  mod.rs  run.rs  status.rs  work.rs
