[package]
name = "pfm"
version = "0.1.0"
edition = "2021"
description = "Production Flow Manager - orchestrates Claude Code role agents via file-driven state"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
